improved swagger definition moved security to main
